# hotel

./: .gitlab-ci.yml  Dockerfile  README.md  hotel.py  input.csv  pyproject.toml
.github/workflows/: main.yml
